--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" type="module" defer></script>
 </head>
 <body>
-    <div class="road"></div>
-    <script src="script.js" type="module"></script>
+    <div class="speedContainer"></div>
+    <div class="surfaceContainer"></div>
+    <div class="roadContainer"></div>
+    <div><button id="start">Alustama</button></div>
 </body>
 </html>
