--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Peatumisteekond</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" type="module" defer></script>
 </head>
 <body>
+    <h1>Peatumisteekonna arvutus</h1> 
+    <label for="speedContainer">Valige auto liikumiskiirus:</label>
     <div class="speedContainer"></div>
+    <label for="surfaceContainer">Valige teekate:</label>
     <div class="surfaceContainer"></div>
     <div class="roadContainer"></div>
     <div><button id="start">Alustama</button></div>
