--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <div class="speedContainer"></div>
     <label for="surfaceContainer">Valige teekate:</label>
     <div class="surfaceContainer"></div>
-    <div class="roadContainer"></div>
+    <div class="roadWrapper">
+        <div class="carContainer">
+            <img src="./pictures/car.png">
+            <img class="wheel_first" src="./pictures/wheel.png">
+            <img class="wheel_second" src="./pictures/wheel.png">
+        </div>
+        <div class="roadContainer"></div>
+    </div>
     <div><button id="start">Alustama</button></div>
 </body>
 </html>
