Car wheels development

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peatumisteekond</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" type="module" defer></script>
 </head>
@@ -13,6 +16,7 @@
     <div class="speedContainer"></div>
     <label for="surfaceContainer">Valige teekate:</label>
     <div class="surfaceContainer"></div>
+    <div class="messageContainer">Vali sõidukiirus ja tee pinnase kvaliteet.</div>
     <div class="roadWrapper">
         <div class="carContainer">
             <img src="./pictures/car.png">
