--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="surfaceContainer"></div>
     <div class="messageContainer">Vali sõidukiirus ja tee pinnase kvaliteet.</div>
     <div class="roadWrapper">
+        <div class="roadContainer"></div>
         <div class="carContainer">
             <img src="./pictures/car.png">
-            <img class="wheel_first" src="./pictures/wheel.png">
-            <img class="wheel_second" src="./pictures/wheel.png">
+            <div class="wheel_first"><img src="./pictures/wheel.png"></div>
+            <div class="wheel_second"><img src="./pictures/wheel.png"></div>
         </div>
-        <div class="roadContainer"></div>
     </div>
     <div><button id="start">Alustama</button></div>
 </body>
