--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@
         </div>
     </div>
     <div><button id="start">Alustama</button></div>
+    <dialog id="modal">
+        <button class="close" id="closeModal">&times;</button>
+        <p id="textModal"></p>
+        <h2>Peatumisteekonna Arvutamine</h2>
+        <p>Vahemaade arvutamisel on aluseks võetud ühe sekundi (1 s) reaktsiooniaeg ja keskmine aeglustus:</p>
+        <ul>
+            <li>Kuival teekattel: <strong>9 m/s²</strong></li>
+            <li>Märjal teekattel: <strong>6 m/s²</strong></li>
+            <li>Lumisel teekattel: <strong>3 m/s²</strong></li>
+            <li>Jäisel teekattel: <strong>1,5 m/s²</strong></li>
+        </ul>
+        <p>Peatumisteekonnad ja -ajad on arvutatud matemaatiliselt. Tegelikkuses võivad erinevate sõidukite konstruktsioonidest tulenevad erinevused olla märkimisväärsed. Vahemaad on ümardatud lähima meetrini.</p>
+    </dialog>
 </body>
 </html>
